# cmlkit

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/cmlkit/: __init__.py
src/cmlkit/data/: eda.py
src/cmlkit/models/: performance.py
src/cmlkit/tuning/: grid_search.py
tests/: test_cmlkit.py
