[tool.poetry]
name = "cmlkit"
version = "2025.0.2.1"
description = "ma machine learning package to facilitate analysis and reproduce verified code"
authors = ["camilouribeg"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
seaborn = "^0.13.2"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
jupyterlab = "4.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
